feat: information and add ui

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,15 @@
     <string name="app_name">Sertifikasi VSGA</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="title_activity_register">RegisterActivity</string>
+    <string name="title_activity_information">Tentang Aplikasi</string>
+    <string name="title_activity_add">Masukkan Data</string>
+    <string name="content_information">
+        Aplikasi Kampusku merupakan aplikasi yang digunakan untuk pendataan mahasiswa.
+        User nantinya bisa menambahkan, update dan hapus data mahasiswa
+    </string>
+
+    <string-array name="jenis_kelamin_array">
+        <item>Pria</item>
+        <item>Wanita</item>
+    </string-array>
 </resources>
